<resources>
    <string name="app_name">The Vt</string>

    <string name="login.button.text">Login with VK</string>
    <string name="error.login">Error login, check your login or password</string>
    <string name="enter_code">Enter code</string>
    <string name="error_code">Error code</string>
    <string name="login.password.hint">Password</string>
    <string name="login.username.hint">Phone number or e-mail</string>

    <string name="user.name" formatted="false" translatable="false">%s %s</string>
    <string name="password_too_short">Password is short or empty</string>
    <string name="username_too_short">Username is short or empty</string>
    <string name="follow">Follow</string>
    <string name="followed">Followed</string>
    <string name="error_loading">Loading error</string>
    <string name="search">Search</string>
    <string name="main_screen">Feed</string>
    <string name="password_error">Check your password</string>
    <string name="username_error">Check your username</string>
    <string name="enter_captcha">Enter captcha</string>
    <string name="enter">Enter</string>
    <string name="two_factor_number">We sent a message with the code to the number %s</string>

    <plurals name="video_views">
        <item quantity="one">@string/plural_view</item>
        <item quantity="many">@string/plural_views</item>
        <item quantity="other">@string/plural_views</item>
    </plurals>

    <string name="plural_view">%s view</string>
    <string name="plural_views">%s views</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hd_filter">High quality</string>
    <string name="adult_filter">Safe search</string>
    <string name="duration">By duration</string>
    <string name="sort">Sort by</string>

    <string name="duration.any">Any duration</string>
    <string name="duration.long">Long</string>
    <string name="duration.short">Short</string>

    <string name="sort_by.recent">Recent</string>
    <string name="sort_by.duration">Duration</string>
    <string name="sort_by.relevance">Relevance</string>

    <string name="navigation.home.title">Home</string>
    <string name="navigation.explore.title">Explore</string>
    <string name="navigation.person.title">Profile</string>

    <string name="tab_title_top">Top</string>
    <string name="tab_title_feed">Feed</string>
    <string name="tab_title_ugc">Popular</string>
    <string name="tab_title_series_and_tv">Series and TV shows</string>

    <string name="tab_videos_title">Videos</string>
    <string name="empty_list">There is nothing! Try to refresh the page or subscribe to someone.</string>
    <string name="video_title">Video</string>
    <string name="tab_albums_title">Albums</string>

    <string name="video_quality_title_240p" translatable="false">240</string>
    <string name="video_quality_title_360p" translatable="false">360</string>
    <string name="video_quality_title_480p" translatable="false">480</string>
    <string name="video_quality_title_720p" translatable="false">720</string>
    <string name="video_quality_title_1080p" translatable="false">1080</string>
    <string name="video_quality_title_hls">Auto</string>
    <string name="send_to">Send to</string>
    <string name="add_to_albums_title">Add to albums</string>

    <string name="shared_with_vt" formatted="false">Watch the video %s: %s from TheVt: https://play.google.com/store/apps/details?id=akhmedoff.usman.thevt</string>
    <string name="my_album">My album</string>
    <string name="album_added">Added</string>
    <string name="add_to_my_videos">Add to my videos</string>
    <string name="delete_from_my_videos">Delete from my videos</string>
    <string name="add_to_my_albums">Add  to my albums</string>
    <string name="retry">Retry</string>
    <string name="error_loading_video">Error uploading video. It\'s possible that it was deleted or blocked</string>
    <string name="error_show_video_in_browser">Try to look through the browser</string>
    <string name="error_reload">Reload</string>
    <string name="notification_channel_download_name">Downloads</string>
    <string name="notification_channel_download_desc">Video downloads progress</string>
    <string name="notification_downloading_title">Downloading</string>
    <string name="notification_downloading_pause">Paused</string>
    <string name="notification_downloading_successful">Successful</string>
    <string name="notification_downloading_running">Downloading</string>
    <string name="notification_downloading_failed">Failed</string>
    <string name="navigation.search.title">Search</string>
    <string name="my_albums">Albums</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="favourites">Favourites</string>
    <string name="empty_list_favourites">Your fave list is empty.</string>
    <string name="title_activity_video_new" translatable="false">VideoNewActivity</string>
    <string name="like">like</string>
    <string name="likes">likes</string>
    <string name="add">Add</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="video_default_quality">Default video quality</string>
    <string name="video_default_save_path">Video save path</string>
    <string name="cache_size">Clear cache</string>
    <string name="created_by" translatable="false">Created by Usman</string>
    <string name="sign_out">Sign out</string>
    <string name="empty_profile_videos_list">You do not have any videos.</string>
</resources>
