<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?selectableItemBackground">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/video_default_quality"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <Spinner
            android:id="@+id/qualities_spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:dropDownWidth="match_parent"
            android:entries="@array/qualities" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_path"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?selectableItemBackground">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/video_default_save_path"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <TextView
            android:id="@+id/video_save_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            tools:text="/Movies" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/clear_cache"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?selectableItemBackground">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/cache_size"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <TextView
            android:id="@+id/cache_size"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_horizontal_margin"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            tools:text="1Gb" />
    </LinearLayout>

    <Button
        android:id="@+id/sign_out_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/sign_out" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:text="@string/created_by" />
</LinearLayout>