<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways">

                <androidx.cardview.widget.CardView
                    android:id="@+id/search_box_collapsed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="8dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:transitionName="search_card"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:id="@+id/search_expanded_box"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:background="@drawable/rounded_corners"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageButton
                            android:id="@+id/search_expanded_back_button"
                            android:layout_width="48dp"
                            android:layout_height="match_parent"
                            android:background="?attr/selectableItemBackground"
                            android:src="@drawable/ic_arrow_back" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/search_expanded_edit_text"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@null"
                            android:drawableEnd="@drawable/ic_search"
                            android:drawablePadding="16dp"
                            android:focusable="true"
                            android:hint="@string/search"
                            android:imeOptions="actionSearch"
                            android:inputType="textFilter"
                            android:padding="8dp"
                            android:singleLine="true"
                            android:textSize="@dimen/search_text_size" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="true"
            android:clipToPadding="true"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/search_videos" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/filter_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:src="@drawable/ic_filter_list"
            app:fabSize="normal" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_filter_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="?android:attr/actionBarSize"
            android:paddingEnd="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <Spinner
                android:id="@+id/duration_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:entries="@array/durations" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/sort"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <Spinner
                android:id="@+id/sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:entries="@array/sorts" />

            <CheckBox
                android:id="@+id/hd_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/hd_filter" />

            <CheckBox
                android:id="@+id/adult_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/adult_filter" />

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>