<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="end">

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/search_expanded_box"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:background="@drawable/rounded_corners"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/search_expanded_back_button"
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/ic_arrow_back"
                    android:tint="@color/searchbox_icon_tint" />

                <EditText
                    android:id="@+id/search_expanded_edit_text"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/search_box_icon_size"
                    android:layout_marginStart="@dimen/search_box_text_left_margin"
                    android:layout_weight="1"
                    android:background="@null"
                    android:imeOptions="actionSearch"
                    android:inputType="textFilter"
                    android:singleLine="true"
                    android:textSize="@dimen/search_text_size" />

                <ImageButton
                    android:id="@+id/search_expanded_magnifying_glass"
                    android:layout_width="56dp"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_search"
                    android:tint="@color/searchbox_icon_tint"
                    android:visibility="invisible"
                    tools:visibility="visible" />
            </LinearLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/search_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="true"
            android:clipToPadding="true"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/search_videos" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/filter_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:src="@drawable/ic_filter_list"
            app:fabSize="normal" />
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_filter_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="?android:attr/actionBarSize">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <Spinner
                android:id="@+id/duration_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:entries="@array/durations" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/sort"
                android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

            <Spinner
                android:id="@+id/sort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:entries="@array/sorts" />

            <CheckBox
                android:id="@+id/hd_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/hd_filter" />

            <CheckBox
                android:id="@+id/adult_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/adult_filter" />

        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>